@@ -130,6 +130,12 @@
 	}
       NS_HANDLER
 	{
+	  static BOOL warned = NO;
+	  if (!warned)
+	    {
+	      warned = YES;
+	      NSWarnLog(@"An error occurred while determining the Ghostscript executable path. If you would like to use Ghostscript you can set the GSGhostscriptExecutablePath user default to the full path to the gs executable.");
+	    }
 	}
       NS_ENDHANDLER
     }
@@ -173,6 +179,7 @@
     }
   NS_HANDLER
     {
+      NSWarnLog(@"An error occurred while attempting to invoke Ghostscript at the following path: %@", launchPath);
     }
   NS_ENDHANDLER
 
