@@ -1,3 +1,9 @@
+2011-07-11  Eric Wasylishen  <ericw@new-host-2.home>
+
+	* Source/GSGhostscriptImageRep.m: Add NSWarnLog to execption
+	handlers to print a message when finding or invoking Ghostscript
+	fails.
+
 2011-07-11 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSImage.m (-nativeDrawInRect:...): Compute the rep size
